fix z-index problem of sidebar

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -5,6 +5,11 @@ body {
     background-color: #f3f3f3;
 }
 
+#frame {
+    touch-action: pan-y;
+    .screen;
+}
+
 #main {
     position: relative;
     top: 50px;
