--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -7,3 +7,15 @@
 .shadowed () {
     box-shadow: 0 1px 2px 0 rgba(8,1,3,.15);
 }
+
+.material-shadowed () {
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2)
+}
+
+.screen (@position: fixed) {
+    position: @position;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
