--- a/src/styles/frame/sidebar.less
+++ b/src/styles/frame/sidebar.less
@@ -15,25 +15,11 @@
     display: none;
 
     background-color: #000;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    left: 0;
+    .screen;
     z-index: 10;
     transition: opacity .3s ease-out, visibility .3s ease-out;
 
     @media @phones {
         display: block;
     }
-}
-
-.drag-control {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 499;
 }
